Fixed an issue with current location button not aligned in the middle.

--- a/src/app/calendar-nav/calendar-nav.component.less
+++ b/src/app/calendar-nav/calendar-nav.component.less
@@ -88,6 +88,7 @@
       border-radius: 50%;
       box-shadow: inset 0 0 0 3px @c-white;
       cursor: pointer;
+      vertical-align: middle;
 
       &:hover {
         background: @c-black;
